# ground_station_interface

./: README.md
ground_station/: CMakeLists.txt  ComunicationInformationScreen.qml  EyectionInformationScreen.qml  GeneralInformationScreen.qml  GpsInformationScreen.qml  Info1Screen.qml  Info2Screen.qml  Main.qml  MotionInformationScreen.qml  PrincipalScreen.qml  StartScreen.qml  TestScreen.qml  graphdata.cpp  graphdata.h  main.cpp  serialconfiguration.cpp  serialconfiguration.h  uiconstants.cpp  uiconstants.h
